--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap');
+
 @import 'tailwindcss';
 
 @plugin 'flowbite/plugin';
@@ -61,7 +62,11 @@ body {
 }
 
 .nunito-black {
-	font-family: 'Nunito-black', sans-serif;
+	font-weight: 900;
+}
+
+.nunito-extralight {
+	font-weight: 200;
 }
 
 .navhover {
